arreglando errores ortográficos forms

--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -60,8 +60,8 @@
         </div>
         <button type="submit" value="Enviar" class="btn__send button">Iniciar sesion</button>
         <div class="user">
-          <a href="" class="enlace_link">¿Olvidate tu contraseña?</a>
-          <a href="/user/signup" class="enlace_link"  >¿No tenes cuenta?</a>
+          <a href="" class="enlace_link">¿Olvidaste tu contraseña?</a>
+          <a href="/user/signup" class="enlace_link"  >¿No tenés cuenta?</a>
         </div>
         <div class="user social">
           <a href="" class="social__btn button"
