--- a/spellBook/src/views/users/register.ejs
+++ b/spellBook/src/views/users/register.ejs
@@ -8,14 +8,14 @@
 <!-- HEADER -->
 <%- include('../partials/header') %> 
 
-   <!-- COMIENZA EL REGITRO DE USUARIO -->
+   <!-- COMIENZA EL REGISTRO DE USUARIO -->
 
   <main class="conteiner-main">
      
     <!-- FORMULARIO DE REGISTRO -->
     <form action="/signup" method="POST">
 
-      <!-- IMAGEN DE USUARIO, BARITA -->
+      <!-- IMAGEN DE USUARIO, VARITA -->
       <section class="register-user">    
         <div class="user-image">
           <img  class= "user-image-item"src="/images/recursos/user-img.png"  alt="">
