--- a/spellBook/src/views/users/signUp.ejs
+++ b/spellBook/src/views/users/signUp.ejs
@@ -50,7 +50,7 @@
         </div>
 
         <div class="user">
-          <input type="password" name="repeat_password" placeholder="Comfimar contraseña" class="user__info"/>
+          <input type="password" name="repeat_password" placeholder="Confimar contraseña" class="user__info"/>
           <% if (locals.errors && errors.repeat_password) { %>
             <span class="warning"><%= errors.repeat_password.msg %> </span>
             <%}%>
