se arregla header en vista admin

--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -13,6 +13,9 @@
 @import url('books.css');
 
 /* ESTILOS   GENERALES */
+.relative {
+    position: relative;
+}
 .d-inline {
     display: inline;
     margin: 5px;
