--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
 <body>
   <!-- HEADER -->
- <header class="header error-bg">
+ <header class="header error-bg relative">
   <div class="star star1"></div>
   <div class="star star2"></div>
   <div class="star star3"></div>
@@ -49,7 +49,7 @@
         <h2>Libros</h2>
         <label name="search" id="search" >
           <i class="fas fa-search "></i>
-          <input class="" type="search" name="search" id="search" placeholder="">
+          <input class="" type="search" name="search" id="" placeholder="">
         </label>
       </div>
       <div class="products-table">
