--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -40,8 +40,8 @@
       </div>
     </div>
     <!-- LUPA DE BUSQUEDA -->
-    <form action="/search" method="get" class="search">
-        <input type="search" name="search" placeholder="Buscar">
+    <form action="/search" method="get" class="search" >
+        <input type="search" name="search" placeholder="Buscar" class="search-header">
        
     </form>
     <!-- HACIA EL CARRITO DE COMPRAS -->
