--- a/spellBook/public/stylesheets/aboutUs.css
+++ b/spellBook/public/stylesheets/aboutUs.css
@@ -1,5 +1,6 @@
 body{background: var(--color-beige);
-    margin:0}
+    margin:0;
+    margin-top: 65px}
 
 /* TEXTO DESCRIPTIVO */
 .main-AboutUs .text-AboutUs {
@@ -147,4 +148,7 @@ border-radius: 5px;
 
 
 
+    }
+    @media (min-width: 768px){
+    
     }
