--- a/spellBook/public/stylesheets/header.css
+++ b/spellBook/public/stylesheets/header.css
@@ -18,7 +18,9 @@
   padding: 0 20px;
   
 }
-
+.relative {
+  position: relative;
+}
 .logo__link {
   color: var(--color-beige);
   font-size: 1.8rem;
@@ -107,7 +109,8 @@
   clip-path: inset(0 0 100% 0);
 
 }
-input[type="search"] {
+/* input[type="search"] */
+.search-header {
   width: 100%;
   height: 100%;
   border: 3px solid var(--color-azulOscuro);
@@ -195,7 +198,7 @@ input[type="search"] {
     height: 150px;
   }
   .header {
-    height: 100px;
+    height: 120px;
     gap: 20px;
     padding: 30px;
     
