se quita margin en bodi de aboutUs

--- a/spellBook/src/views/admin/editForm.ejs
+++ b/spellBook/src/views/admin/editForm.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
     <!-- HEAD -->
     <%- include('../partials/head') %>
-<body class="edit-body">
+<body class="edit-body relative">
    
   <div class="star star1"></div>
   <div class="star star2"></div>
