--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
 <body>
   <!-- HEADER -->
- <header class="header error-bg">
+ <header class="header error-bg relative">
   <div class="star star1"></div>
   <div class="star star2"></div>
   <div class="star star3"></div>
