--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -20,11 +20,12 @@
 } */
 
 .user-image-item {
-    border-radius: 50%;
+    border-radius: 100%;
+    height: 150px;
     width: 150px;
 }
 
-/* BARITA */
+/* VARITA */
 .user-magic-wand {
     width: 55%;
 }
@@ -35,12 +36,12 @@
 
 /*  CONTENEDOR DE USER Y EMAIL */
 .conteiner-info-user{
-    border: solid 1px grey;
+    display: flex;
+    flex-direction: column;
     border-radius: 15px;
     background-color: var(--color-beige);
     width: 75%;
    margin: 0 auto;
-   box-shadow: var(--box-shadow-images);
    margin-top: 2rem;
 }
 /* NOMBRE DEL USUARIO */
@@ -50,27 +51,26 @@
     align-items: center;
     margin: 1rem auto;
     width: 100%;
-    font-size: 0.9rem;
+    font-size:1.2rem;
     font-family: var(--font-berkshire);
 }
 
 /* TÍTULO DE SECCIÓN */
 .title-seccion {
-    font-size: var(--discounts-descriptions);
+    font-size: 2rem;
     font-family: var(--font-berkshire);
     margin: 2rem ;
+    text-shadow: 1px 1px 2px grey;
 
 }
 
 /* CAMPOS A LLENAR */
 
 .conteiner-user-data {
-    border: solid 1px grey;
-    border-radius: 15px;
+    
     background-color: var(--color-beige);
     width: 90%;
     margin: 0 auto;
-    box-shadow: var(--box-shadow-images);
     margin-top: 1rem;
     position: relative;
 }
@@ -149,7 +149,7 @@
 
 .user-date-inputs-date {
     color: var(--color-azulOscuro);
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-family: var(--font-roboto);
     outline: none;
     max-height: 40px;
@@ -189,8 +189,15 @@
 
  /* NO HAZ REALIZADO COMPRA */
  .now-buy {
-     font-size: var(--paragraph);
+     font-size: 1.2rem;
      margin: 25px auto;
      text-align: center;
+
+ }
+
+
+ @media (min-width: 768px) {
+
+
 
  }
