--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -127,6 +127,7 @@ section.product-form{
     justify-content: center;
     overflow: hidden;
     display: none;
+    top: 50px;
 }
 section.productEdit-form{
     width: 100%;
@@ -254,7 +255,7 @@ form#product fieldset input.display-shop{
         width: 25%;
         height: auto;
     }
-}
+    
 @media (min-width: 768px ){
     table {
         border-spacing: 0px;
@@ -268,6 +269,9 @@ form#product fieldset input.display-shop{
         display: table-cell;
         width: 45%;
     }
+    section.product-form{
+        top: 120px;
+}
 }
 @media (min-width: 1024px ){
     .products-table{
