se crea alerta antes de eliminar un usuario o producto, y se revisan validaciones del login y register del lado del back

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -15,6 +15,9 @@
     height: 10rem;
     align-items: center;
 }
+.btn-delete {
+    cursor: pointer;
+}
 .edit-btn {
     font-size: var(--icon);
     color: var(--color-beige);
