--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -86,13 +86,11 @@
                   </td>
                   <td>
                     <form action="deleteProduct/<%=book.id%>?_method=DELETE" id="button-delete" method="POST">
-                      <button class="delete-btn" type="submit"><i class="far fa-trash-alt"></i></button>
+                      <button class="btn-delete" type="submit"><i class="far fa-trash-alt"></i></button>
                     </form>
-                  </td>
-                  
-                </tr>
-           
-                 
+                  </td>   
+                                 
+                </tr>       
                 <% }) %>
 
             </tbody>
