--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -66,7 +66,7 @@
               <td><a href="/users/<%= user.id %> "><%= user.rol%></a></td>
               <td>
                 <form action="deleteUser/<%=user.id%>?_method=DELETE" id="button-delete-user" method="POST">
-                  <button class="delete-btn" type="submit"><i class="far fa-trash-alt"></i></button>
+                  <button class="btn-delete" type="submit"><i class="far fa-trash-alt"></i></button>
                 </form>
               </td>
             </tr>
@@ -76,5 +76,6 @@
       </div>
     </section> 
   </main>
+  <script src="/js/adminUser.js"></script>
 </body>
 </html>
