--- a/spellBook/public/stylesheets/login.css
+++ b/spellBook/public/stylesheets/login.css
@@ -38,6 +38,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-size: 1rem;
 }
 .user__info-name, .user__info-email, .user__info-password, .user__info-password-confirm {
   background-color: var(--color-beige);
