--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     margin-top: 15px;
+   
 }
 
 /* .user-image {   
@@ -41,8 +42,8 @@
     border-radius: 15px;
     background-color: var(--color-beige);
     width: 75%;
-   margin: 0 auto;
-   margin-top: 2rem;
+    margin: 0 auto;
+    margin-top: 2rem;
 }
 /* NOMBRE DEL USUARIO */
 .info-user{
@@ -73,7 +74,7 @@
     width: 90%;
     margin: 0 auto;
     margin-top: 1rem;
-    position: relative;
+    position: relative;   
 }
 /* PARA TODOS LOS IMPUTS */
 .user-data {
@@ -81,6 +82,13 @@
     justify-content: space-between;
     width: 100% ;
     margin: 20px auto;
+    height: 80px;
+}
+.user-data-firstname {
+    text-align: right;
+    display: inline-block;
+    width: 100%;
+    margin: 0px auto 20;
     height: 80px;
 }
 
@@ -168,6 +176,11 @@
 
 
 /* BOTON DE GUARDAR */
+.user-submit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
  .btn-save {
     background-color: var(--color-azulOscuro);
     border: none;
@@ -178,6 +191,7 @@
     box-shadow: var(--box-shadow-button);
     display: block;
     margin: 2rem auto;
+    text-align: center;
  }
 
  /* LINEA HR */
